// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render SearchResultsPage component render SearchResultsPage grid view correctly 1`] = `
<React.Fragment>
  <main
    className="main"
  >
    <Header
      className="secondary"
    >
      <FilterList>
        <Button
          className="filterButton"
          onClick={[MockFunction]}
        >
          Trending
        </Button>
        <Button
          className="filterButton"
          onClick={[MockFunction]}
        >
          Top rated
        </Button>
        <Button
          className="filterButton"
          onClick={[MockFunction]}
        >
          Coming soon
        </Button>
        <SelectButton
          filterMovies={[MockFunction]}
          genres={
            Array [
              Object {
                "id": 1,
                "name": "Action",
              },
              Object {
                "id": 2,
                "name": "SciFi",
              },
            ]
          }
        >
          Genre
        </SelectButton>
      </FilterList>
      <ToggleButton
        className="toggleGridButton"
        handleGridToggle={[MockFunction]}
        isGrid={true}
      />
    </Header>
    <MovieList
      genres={
        Array [
          Object {
            "id": 1,
            "name": "Action",
          },
          Object {
            "id": 2,
            "name": "SciFi",
          },
        ]
      }
      isGrid={true}
      movieTrailerKey="testMovieTrailerKey"
      movies={
        Array [
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
        ]
      }
      updateMovieTrailerKey={[MockFunction]}
    />
  </main>
</React.Fragment>
`;

exports[`render SearchResultsPage component render SearchResultsPage table view correctly 1`] = `
<React.Fragment>
  <main
    className="main"
  >
    <Header
      className="secondary"
    >
      <FilterList>
        <Button
          className="filterButton"
          onClick={[MockFunction]}
        >
          Trending
        </Button>
        <Button
          className="filterButton"
          onClick={[MockFunction]}
        >
          Top rated
        </Button>
        <Button
          className="filterButton"
          onClick={[MockFunction]}
        >
          Coming soon
        </Button>
        <SelectButton
          filterMovies={[MockFunction]}
          genres={
            Array [
              Object {
                "id": 1,
                "name": "Action",
              },
              Object {
                "id": 2,
                "name": "SciFi",
              },
            ]
          }
        >
          Genre
        </SelectButton>
      </FilterList>
      <ToggleButton
        className="toggleGridButton"
        handleGridToggle={[MockFunction]}
        isGrid={false}
      />
    </Header>
    <MovieList
      genres={
        Array [
          Object {
            "id": 1,
            "name": "Action",
          },
          Object {
            "id": 2,
            "name": "SciFi",
          },
        ]
      }
      isGrid={false}
      movieTrailerKey="testMovieTrailerKey"
      movies={
        Array [
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
        ]
      }
      updateMovieTrailerKey={[MockFunction]}
    />
  </main>
</React.Fragment>
`;

exports[`render SearchResultsPage component render loading status correctly 1`] = `
<React.Fragment>
  <main
    className="main"
  >
    <Header
      className="secondary"
    >
      <FilterList>
        <Button
          className="filterButton"
          onClick={[MockFunction]}
        >
          Trending
        </Button>
        <Button
          className="filterButton"
          onClick={[MockFunction]}
        >
          Top rated
        </Button>
        <Button
          className="filterButton"
          onClick={[MockFunction]}
        >
          Coming soon
        </Button>
        <SelectButton
          filterMovies={[MockFunction]}
          genres={
            Array [
              Object {
                "id": 1,
                "name": "Action",
              },
              Object {
                "id": 2,
                "name": "SciFi",
              },
            ]
          }
        >
          Genre
        </SelectButton>
      </FilterList>
      <ToggleButton
        className="toggleGridButton"
        handleGridToggle={[MockFunction]}
        isGrid={false}
      />
    </Header>
    <MovieList
      genres={
        Array [
          Object {
            "id": 1,
            "name": "Action",
          },
          Object {
            "id": 2,
            "name": "SciFi",
          },
        ]
      }
      isGrid={false}
      movieTrailerKey="testMovieTrailerKey"
      movies={
        Array [
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
        ]
      }
      updateMovieTrailerKey={[MockFunction]}
    />
  </main>
  <Preloader />
</React.Fragment>
`;
